# marteldb

./: Cargo.toml  README.md  \  flake.nix  grammar-rewrite  index.html  sqlgrammar  test.sql
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 0wl9cnjp735dsd4hm82a3l1a9h9kkkdv-source  2zfrifbmfhjknajbrg5g503l14qjfdg9-source  pcn869ampqa21i4i2hnsybc4jdz13d3y-source  w99vkfghgibzi2218knn0i9lrpcf1yj6-source  zda4nyi9q0kz6k0q1h55b5b56zgmmlam-source
cmd/cli/: Cargo.toml
cmd/cli/src/: repl.rs
cmd/server/: Cargo.toml
crates/ast/: Cargo.toml
crates/ast/src/: identifier.rs  lib.rs  name.rs  node.rs  nodes.rs  prettyprinter.rs  visitor.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lexer.rs  token.rs
crates/parser/: Cargo.toml
crates/parser-ast/: Cargo.toml
crates/parser-ast/src/: ast.rs  visitor.rs
crates/parser/src/: ast.rs  errors.rs  grammar.lalrpop  lexer.rs  lib.rs  parser.rs  parsing_errors.rs  prettyprinter.rs  statement.rs  token.rs  token_source.rs  tokens.rs  visitor.rs
crates/parser/src/lexer/: cursor.rs
crates/parser/src/parser/: clause.rs  expression.rs  parser.rs  statement.rs
crates/parsing-ast/: Cargo.toml
crates/parsing-ast/src/: ident.rs  lib.rs  nodes.rs
crates/parsing-error/: Cargo.toml  error.rs
crates/parsing-lexer/: Cargo.toml
crates/source-index/: Cargo.toml
marteldb-book/: book.toml  index.html
marteldb-book/src/: SUMMARY.md  references.md
src/: lib.rs  main.rs  parser.rs  planner.rs  repl.rs  storage.rs
src/parser/: ast.rs  calculator1.lalrpop  errors.rs  grammar.lalrpop  grammer.lalrpop  lexer.rs  mod.rs  parsing_errors.rs  prettyprinter.rs  token.rs  visitor.rs
src/planner/: semantic_checker.rs
src/storage/: disk_page.rs  mem_page.rs  page.rs
tests/: parser.rs
(+22 files in other folders)
