# [package]
# name = "marteldb"
# version = "0.1.0"
# edition = "2021"
#
# [dependencies]
# clap = { version = "4.5.13", features = ["derive"] }
# codespan-reporting = "0.11.1"
# lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] } 
# logos = "0.14.0"
# shlex = "1.3.0"
# termcolor = "1.4.1"
#
# [build-dependencies]
# lalrpop = "0.20.2"
#
# [lib]
# path = "src/lib.rs"
#
# [[bin]]
# path = "src/main.rs"
# name = "marteldbk
[workspace]
resolver = "2"

members = [
    "crates/*",
    "cmd/*"
]

[workspace.dependencies]
# Local Crates
parser = { path = "./crates/parser", version = "0.0.0" }
lexer = { path = "./crates/lexer", version = "0.0.0" }
cli = { path = "./cmd/cli", version = "0.0.0" }

clap = { version = "4.5.13", features = ["derive"] }
codespan-reporting = "0.11.1"
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] } 
logos = "0.14.0"
shlex = "1.3.0"
termcolor = "1.4.1"
lalrpop = "0.20.2"
anyhow = "1.0.89"

