[package]
name = "cli"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "cli"
path = "src/bin/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
parser.workspace = true
lexer.workspace = true

clap = { workspace = true, features = ["derive"] }
codespan-reporting = { workspace = true }
shlex = { workspace = true }
termcolor = { workspace = true }
lalrpop-util.workspace = true

