[package]
name = "parser"
version = "0.0.0"
edition = "2021"

[dependencies]
parsing-lexer.workspace = true
parsing-error.workspace = true
parsing-ast.workspace = true
# lalrpop-util = { workspace = true , features = ["lexer", "unicode"] } 
anyhow.workspace = true
logos.workspace = true


[build-dependencies]
# lalrpop.workspace = true
